--- a/backoffice/package.json
+++ b/backoffice/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.2.3",
     "form-data": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
